[package]
name = "price_impact_modeling"
version = "0.1.0"
edition = "2021"
description = "Price Impact Modeling with Machine Learning for Trading"

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"

[[example]]
name = "trading_example"
path = "examples/trading_example.rs"
